@@ -5,5 +5,7 @@ Usually just overwrite the old oinkmaster.pl file with the new one.
 - When upgrading to v0.4 you should know that the file oinkmaster.conf
   is now used for configuration. It's probably easiest to start with the
   default one and append your old customization to it.
+  The "file" and "sid" keywords in oinkmaster.conf are obsolete
+  (still works though). They are now called "skipfile" and "disablesid".  
   Also, a few command line switches were removed since they're not
-  needed anymore. Please also read the new documentation.
+  needed anymore. Please read the new documentation.
