@@ -21,19 +21,9 @@ path = /bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin
 
 # Files in the archive matching this regexp will be checked
 # for changes, and then updated or added if needed.
-# (you may want to add sid-msg.map if running Barnyard)
-update_files = \.rules$|\.config$|\.conf$|\.txt$
-
-
-
-#########################################
-# SIDs to comment out after each update #
-#########################################
-
-# SID 1, 2 and 3 are disabled by default, just as an example.
-sid 1    # Disable rule with sid 1.
-sid 2    # Disable rule with sid 2.
-sid 3    # Disable rule with sid 3.
+# (you can then choose to skip individual files by specifying
+# the "skipfile" keyword below").
+update_files = \.rules$|\.config$|\.conf$|\.txt$|\.map$
 
 
 
@@ -45,13 +35,29 @@ sid 3    # Disable rule with sid 3.
 # have put some local rules into our own "local.rules", and we don't want
 # it to get overwritten by the empty one from the archive after every update.
 
-file local.rules
-
-
+skipfile local.rules
 
 # Also skip snort.conf from the rules archive by default, since we don't
 # want to overwrite our own snort.conf if we have it in the same directory as
 # the rules. (If you have your own snort.conf in another directory, it may be
 # really nice to check for changes in this file though!)
 
-file snort.conf
+skipfile snort.conf
+
+# Skip sid-msg.map by default.
+# Comment out if you use Barnyard and want to update the sid map.
+
+skipfile sid-msg.map
+
+
+
+#########################################
+# SIDs to comment out after each update #
+#########################################
+
+# SID 1, 2 and 3 are disabled by default, just as an example.
+disablesid 1    # Disable rule with sid 1.
+disablesid 2    # Disable rule with sid 2.
+disablesid 3    # Disable rule with sid 3.
+
+
